--- a/.overstory/config.yaml
+++ b/.overstory/config.yaml
@@ -3,7 +3,7 @@
 
 project:
   name: overstory
-  root: /Users/jayminwest/Projects/overstory
+  root: /Library/Git/overstory
   canonicalBranch: main
 agents:
   manifestPath: .overstory/agent-manifest.json
@@ -22,10 +22,27 @@ mulch:
 merge:
   aiResolveEnabled: true
   reimagineEnabled: false
+cli:
+  base: codex
+providers:
+  codex:
+    type: native
+    runtimes:
+      - codex
+    adapters:
+      codex:
+        commandArgs:
+          - --dangerously-bypass-approvals-and-sandbox
+  claude:
+    type: native
+    runtimes:
+      - claude
+    adapters:
+      claude:
 watchdog:
   tier0Enabled: true
   tier0IntervalMs: 30000
-  tier1Enabled: false
+  tier1Enabled: true
   tier2Enabled: false
   staleThresholdMs: 300000
   zombieThresholdMs: 600000
@@ -33,3 +50,49 @@ watchdog:
 logging:
   verbose: false
   redactSecrets: true
+modelProfiles:
+  fast:
+    provider: codex
+    model: gpt-5.1-codex-mini
+  balanced:
+    provider: codex
+    model: gpt-5.3-codex
+  accelerated:
+    provider: codex
+    model: gpt-5.3-codex-spark
+  deep:
+    provider: codex
+    model: gpt-5.3-codex
+  claudeFast:
+    provider: claude
+    model: haiku
+  claudeBalanced:
+    provider: claude
+    model: sonnet
+  claudeDeep:
+    provider: claude
+    model: opus
+roleProfiles:
+  default:
+    - balanced
+  coordinator:
+    - deep
+  lead:
+    - deep
+  supervisor:
+    - deep
+  builder:
+    - accelerated
+  reviewer:
+    - balanced
+  merger:
+    - balanced
+  scout:
+    - fast
+  monitor:
+    - fast
+
+# Legacy compatibility fallback (models.* still supported in current releases):
+# models:
+#   default: gpt-5
+#   coordinator: o3
